# add-skills

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  registry.json
.github/workflows/: release.yml
src/add_skills/: __init__.py  __main__.py  cli.py  cli_utils.py  exceptions.py
src/add_skills/commands/: __init__.py  add.py  find.py
src/add_skills/core/: __init__.py  agents.py  git.py  installer.py  registry.py  skills.py  source_parser.py
src/add_skills/models/: __init__.py  types.py
src/add_skills/repositories/: __init__.py  filesystem.py  git.py  registry.py
src/add_skills/services/: __init__.py  installer.py  registry_search.py
